data/derived/comb/progs/unify/prog5892.ml.out
Characters 84-85:
  List.fold_left f base xs;;
                 ^
Error: This expression has type int -> 'a -> int -> int
       but an expression was expected of type int -> 'a -> int
       Type int -> int is not compatible with type int 
